--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
         "cross-env": "^5.2.0",
         "graphql": "^15.6.0",
         "rimraf": "^3.0.2",
-        "typescript": "^4.4.0"
+        "typescript": "^4.4.0",
+        "ra-core": "^4.0.0"
     },
     "gitHead": "8748248e40742bbd367338e0573a00213e17d3ab"
 }
