--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "build": "yarn run build-cjs && yarn run build-esm",
         "build-cjs": "rimraf ./dist/cjs && tsc --outDir dist/cjs",
         "build-esm": "rimraf ./dist/esm && tsc --outDir dist/esm --module es2015",
+        "prepare": "yarn build",
         "watch": "tsc --outDir dist/esm --module es2015 --watch"
     },
     "dependencies": {
