--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "license": "MIT",
     "scripts": {
         "build": "yarn run build-cjs && yarn run build-esm",
-        "build-cjs": "rimraf ./dist/cjs && tsc --outDir dist/cjs",
-        "build-esm": "rimraf ./dist/esm && tsc --outDir dist/esm --module es2015",
-        "prepare": "yarn build",
+        "build-cjs": "npx rimraf ./dist/cjs && tsc --outDir dist/cjs",
+        "build-esm": "npx rimraf ./dist/esm && tsc --outDir dist/esm --module es2015",
+        "install": "yarn build",
         "watch": "tsc --outDir dist/esm --module es2015 --watch"
     },
     "dependencies": {
